force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/tc9_pr__Payee_Exit_Calculation__c.object-meta.xml
<CustomObject>
    <description>Details of exit calculations</description>
    <label>Payee Exit Calculation</label>
    <nameField>
        <displayFormat>PEC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Exit Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>