force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Actual_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Actual_Payment_Date__c</fullName>
    <description>The payment date of the Pay Batch in which the payment was made</description>
    <label>Actual Payment Date</label>
    <type>Date</type>
</CustomField>