force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Additional_Payment_To__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Additional_Payment_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An additional payment to an existing Payee Exit Calculation which has already been paid</description>
    <label>Additional Payment To</label>
    <referenceTo>tc9_pr__Payee_Exit_Calculation__c</referenceTo>
    <relationshipLabel>Payee Exit Calculations</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>