force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__ATO_Cessation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Cessation_Type__c</fullName>
    <description>The ATO-approved list of Cessation Types for STP Reporting</description>
    <inlineHelpText>The ATO-approved list of Cessation Types for STP Reporting</inlineHelpText>
    <label>ATO Cessation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Cessation_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>