force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_AL_post_18Aug93__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_AL_post_18Aug93__c</fullName>
    <description>Annual Leave units after 18 August 1993.</description>
    <inlineHelpText>Annual Leave units after 18 August 1993.</inlineHelpText>
    <label>AU AL  post 18 Aug 93</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>