force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_AL_pre_16Aug78__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_AL_pre_16Aug78__c</fullName>
    <description>Annual Leave units before 16 August 1978.</description>
    <inlineHelpText>Annual Leave units before 16 August 1978.</inlineHelpText>
    <label>AU AL  pre 16 Aug 78</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>