force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_AL_pre_17Aug93__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_AL_pre_17Aug93__c</fullName>
    <description>Annual Leave units between 16 August 1978 and 17 August 1993.</description>
    <inlineHelpText>Annual Leave units between 16 August 1978 and 17 August 1993.</inlineHelpText>
    <label>AU AL pre  17 Aug 93</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>