force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Apply_12_Month_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Apply_12_Month_Rule__c</fullName>
    <description>Indicates whether the 12 month rule should be applied.</description>
    <inlineHelpText>Indicates whether the 12 month rule should be applied.</inlineHelpText>
    <label>AU Apply 12 Month Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>