force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Component_Type__c</fullName>
    <description>The Australian Classification of this Payee Exit Calculation record.</description>
    <inlineHelpText>The Australian Classification of this Payee Exit Calculation record.</inlineHelpText>
    <label>AU Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Genuine</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Invalidity</fullName>
            </value>
            <value>
                <fullName>Early Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>