force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Contributes_to_OTE__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Contributes_to_OTE__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <description>Component contributes to Ordinary Time Earnings</description>
    <inlineHelpText>Component contributes to Ordinary Time Earnings</inlineHelpText>
    <label>AU Contributes to OTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>