force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Death_Payment_Recipient__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Death_Payment_Recipient__c</fullName>
    <description>The related Payee record who will receive the payment of death benefits.</description>
    <inlineHelpText>The related Payee record who will receive the payment of death benefits.</inlineHelpText>
    <label>AU Death Payment Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dependant</fullName>
            </value>
            <value>
                <fullName>Non Dependant</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>