force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Death_Recipient_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Death_Recipient_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payee record of the Dependant, Non Dependant or Trustee who will be receiving payment of the deceased employee&apos;s final entitlements.</description>
    <inlineHelpText>The payee record of the Dependant, Non Dependant or Trustee who will be receiving payment of the deceased employee&apos;s final entitlements.</inlineHelpText>
    <label>AU Death Recipient Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Payee Exit Calculations (AU Death Recipient Payee)</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations1</relationshipName>
    <type>Lookup</type>
</CustomField>