force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Determined_Cap_Limit__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Determined_Cap_Limit__c</fullName>
    <description>The ETP cap applied to this Payee Exit Calculation record.</description>
    <inlineHelpText>The ETP cap applied to this Payee Exit Calculation record.</inlineHelpText>
    <label>AU Determined Cap Limit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>