force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Leave_Type__c</fullName>
    <description>The associated Leave Type.</description>
    <inlineHelpText>The associated Leave Type.</inlineHelpText>
    <label>AU Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Long Service Leave</fullName>
            </value>
            <value>
                <fullName>Personal Leave</fullName>
            </value>
            <value>
                <fullName>Other Leave</fullName>
            </value>
            <value>
                <fullName>Leave Loading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>