force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Maximum_Lump_Sum_D__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Maximum_Lump_Sum_D__c</fullName>
    <description>The maximum value of Lump Sum D that can be considered for this Payee Exit Calculation.</description>
    <inlineHelpText>The maximum value of Lump Sum D that can be considered for this Payee Exit Calculation.</inlineHelpText>
    <label>AU Maximum Lump Sum D</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>