force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Ordinary_Time_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Ordinary_Time_Earnings__c</fullName>
    <description>Cumulated Ordinary Time Earnings</description>
    <inlineHelpText>Cumulated Ordinary Time Earnings</inlineHelpText>
    <label>AU Ordinary Time Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>