force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_PAYG_Payee_Withholding__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_PAYG_Payee_Withholding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The relevant Payee Withholding record containing the PAYG setup details of this payee.</description>
    <inlineHelpText>The relevant Payee Withholding record containing the PAYG setup details of this payee.</inlineHelpText>
    <label>AU PAYG Payee Withholding</label>
    <referenceTo>tc9_pr__Payee_Withholding__c</referenceTo>
    <relationshipLabel>Payee Exit Calculations</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>