force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_PAYG_Treatment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_PAYG_Treatment__c</fullName>
    <description>Indicates how this Payee Exit Calculation Result will be considered during Pay Batch calculation.</description>
    <inlineHelpText>Indicates how this Payee Exit Calculation Result will be considered during Pay Batch calculation.</inlineHelpText>
    <label>AU PAYG Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Marginal</fullName>
            </value>
            <value>
                <fullName>Lump Sum A</fullName>
            </value>
            <value>
                <fullName>Lump Sum B</fullName>
            </value>
            <value>
                <fullName>Lump Sum D</fullName>
            </value>
            <value>
                <fullName>Tax Free ETP</fullName>
            </value>
            <value>
                <fullName>Taxable ETP</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>