force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_PAYG_Withholding_Condition__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_PAYG_Withholding_Condition__c</fullName>
    <description>PAYG Condition for Exit Mapping</description>
    <inlineHelpText>PAYG Condition for Exit Mapping</inlineHelpText>
    <label>AU PAYG Withholding Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__AU_Exit_PAYG_Withholding_Condition</valueSetName>
    </valueSet>
</CustomField>