force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Preservation_Age__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Preservation_Age__c</fullName>
    <description>The preservation age of the related Payee.</description>
    <inlineHelpText>The preservation age of the related Payee.</inlineHelpText>
    <label>AU Preservation Age</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>