force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Preservation_Age_Determination__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Preservation_Age_Determination__c</fullName>
    <description>Indicates whether the related Payee is above or below the preservation age cap.</description>
    <inlineHelpText>Indicates whether the related Payee is above or below the preservation age cap.</inlineHelpText>
    <label>AU Preservation Age Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under</fullName>
            </value>
            <value>
                <fullName>Over</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>