force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_TFN_Provided__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_TFN_Provided__c</fullName>
    <description>Indicates whether the Payee has provided their TFN or not.</description>
    <inlineHelpText>Indicates whether the Payee has provided their TFN or not.</inlineHelpText>
    <label>AU TFN Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>