force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__AU_Working_Holiday_Maker__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Working_Holiday_Maker__c</fullName>
    <description>Indicates whether the Payee is an approved working holiday maker or not</description>
    <inlineHelpText>Indicates whether the Payee is an approved working holiday maker or not</inlineHelpText>
    <label>AU Working Holiday Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>