force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calculation_Status__c</fullName>
    <description>The processing status of this Payee Exit record.</description>
    <inlineHelpText>The processing status of this Payee Exit record.</inlineHelpText>
    <label>Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Calculating</fullName>
            </value>
            <value>
                <fullName>Calculate Failed</fullName>
            </value>
            <value>
                <fullName>Confirming</fullName>
            </value>
            <value>
                <fullName>Confirm Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>