force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Calculation_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calculation_Version_Number__c</fullName>
    <label>Calculation Version Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>