force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Cessation_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cessation_Category__c</fullName>
    <description>The overarching category for ceasing employment.</description>
    <inlineHelpText>The overarching category for ceasing employment.</inlineHelpText>
    <label>Cessation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Genuine Redundancy</fullName>
            </value>
            <value>
                <fullName>Non-genuine Redundancy</fullName>
            </value>
            <value>
                <fullName>Early Retirement</fullName>
            </value>
            <value>
                <fullName>Invalidity</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>