force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Cessation_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cessation_Date__c</fullName>
    <description>The final date of employment.</description>
    <inlineHelpText>The final date of employment.</inlineHelpText>
    <label>Cessation Date</label>
    <type>Date</type>
</CustomField>