force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Commit_Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Commit_Final_Payment__c</fullName>
    <label>Commit Final Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>