force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Description__c</fullName>
    <description>The user-entered description for this Payee Exit Calculation record.</description>
    <inlineHelpText>The user-entered description for this Payee Exit Calculation record.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>