force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Employee</description>
    <inlineHelpText>The related Employee.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payee Exit Calculations</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>