force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Entry_Date__c</fullName>
    <description>The entry date that will be inherited by the related Pay Transaction.</description>
    <inlineHelpText>The entry date that will be inherited by the related Pay Transaction.</inlineHelpText>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>