force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Estimated_Withholding_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_Withholding_Amount__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Estimated Withholding Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>