force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Expected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expected_Payment_Date__c</fullName>
    <description>The expected date of payment.</description>
    <inlineHelpText>The expected date of payment.</inlineHelpText>
    <label>Expected Payment Date</label>
    <type>Date</type>
</CustomField>