force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Mapping_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Mapping_Component_Type__c</fullName>
    <description>Exit component type to be used in Exit Mapping</description>
    <inlineHelpText>Exit component type to be used in Exit Mapping</inlineHelpText>
    <label>Mapping Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Exit_Component_Type</valueSetName>
    </valueSet>
</CustomField>