force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Mapping_Status__c</fullName>
    <description>Status of Mapping record</description>
    <inlineHelpText>Status of Mapping record</inlineHelpText>
    <label>Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>