force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Other_Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Other_Leave_Type__c</fullName>
    <description>Description of the leave type</description>
    <label>Other Leave Type</label>
    <type>TextArea</type>
</CustomField>