force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Parent_Calculation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Parent_Calculation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Parent Calculation</label>
    <referenceTo>tc9_pr__Payee_Exit_Calculation__c</referenceTo>
    <relationshipLabel>Payee Exit Calculations (Parent Calculation)</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations1</relationshipName>
    <type>Lookup</type>
</CustomField>