force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Pay_Batch_Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Pay Batch Event.</description>
    <inlineHelpText>The related Pay Batch Event.</inlineHelpText>
    <label>Pay Batch Event</label>
    <referenceTo>tc9_pr__Pay_Batch_Event__c</referenceTo>
    <relationshipLabel>Payee Exit Calculations</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>