force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Pay Code.</description>
    <inlineHelpText>The associated Pay Code.</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Payee Exit Calculations</relationshipLabel>
    <relationshipName>Payee_Exit_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>