force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Pay_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Multiplier__c</fullName>
    <description>The pay multiplier inherited from the related Pay Code.</description>
    <inlineHelpText>The pay multiplier inherited from the related Pay Code.</inlineHelpText>
    <label>Pay Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>