force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Rate__c</fullName>
    <description>The associated rate of pay.</description>
    <inlineHelpText>The associated rate of pay.</inlineHelpText>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>