force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Pay_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Total__c</fullName>
    <description>The calculated pay total that will be populated in the related Pay Transaction.</description>
    <formula>tc9_pr__Pay_Rate__c   *  tc9_pr__Pay_Multiplier__c  *  tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated pay total that will be populated in the related Pay Transaction.</inlineHelpText>
    <label>Pay Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>