force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Payee_Age_at_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Age_at_Exit_Date__c</fullName>
    <description>The payee&apos;s age at the date of cessation.</description>
    <formula>IF( NOT( ISBLANK( tc9_pr__Employee__r.Birthdate ) ),
IF( DATE( 2000 , MONTH( tc9_pr__Employee__r.Birthdate ) , 
DAY( tc9_pr__Employee__r.Birthdate ) ) &lt;= DATE( 2000 , MONTH( tc9_pr__Cessation_Date__c ) , 
DAY(tc9_pr__Cessation_Date__c) ) , 
YEAR (tc9_pr__Cessation_Date__c) - YEAR ( tc9_pr__Employee__r.Birthdate ),
YEAR (tc9_pr__Cessation_Date__c) - YEAR ( tc9_pr__Employee__r.Birthdate ) -1) ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The payee&apos;s age at the date of cessation.</inlineHelpText>
    <label>Payee Age at Exit Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>