force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Payee_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Service_Start_Date__c</fullName>
    <description>The start date inherited from the related Payee record.</description>
    <inlineHelpText>The start date inherited from the related Payee record.</inlineHelpText>
    <label>Payee Service Start Date</label>
    <type>Date</type>
</CustomField>