force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Quantity__c</fullName>
    <description>The quantity of units to be processed.</description>
    <inlineHelpText>The quantity of units to be processed.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>