force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Retirement_Date__c</fullName>
    <description>The anticipated retirement date of the Payee.</description>
    <inlineHelpText>The anticipated retirement date of the Payee.</inlineHelpText>
    <label>Retirement Date</label>
    <type>Date</type>
</CustomField>