force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__System_Generated__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this record was created by a system generated process or not.</description>
    <inlineHelpText>Indicates whether this record was created by a system generated process or not.</inlineHelpText>
    <label>System Generated</label>
    <type>Checkbox</type>
</CustomField>