force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/fields/tc9_pr__User_Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__User_Comments__c</fullName>
    <description>Comments entered by the user regarding this Payee Exit Calculation</description>
    <inlineHelpText>Comments entered by the user regarding this Payee Exit Calculation</inlineHelpText>
    <label>User Comments</label>
    <type>TextArea</type>
</CustomField>