force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/recordTypes/tc9_pr__Australia.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Australia</fullName>
    <active>true</active>
    <description>Australian legislation based exit calculation parent record</description>
    <label>Australia</label>
</RecordType>