force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/recordTypes/tc9_pr__Australia_Item.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Australia_Item</fullName>
    <active>true</active>
    <description>Individual Australian payee exit component</description>
    <label>Australia Item</label>
</RecordType>