force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/recordTypes/tc9_pr__Australia_Mapping.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Australia_Mapping</fullName>
    <active>true</active>
    <description>Mapping Records for Australian Payee Exit Calculations</description>
    <label>Australia Mapping</label>
</RecordType>