force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/recordTypes/tc9_pr__Australia_Result.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Australia_Result</fullName>
    <active>true</active>
    <description>Interpreted Australian results of the payee exit calculation</description>
    <label>Australia Result</label>
</RecordType>