force-app/main/default/objects/tc9_pr__Payee_Exit_Calculation__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Description__c</columns>
    <columns>tc9_pr__Calculation_Status__c</columns>
    <columns>tc9_pr__Calculation_Version_Number__c</columns>
    <columns>tc9_pr__Cessation_Date__c</columns>
    <columns>tc9_pr__Cessation_Category__c</columns>
    <columns>tc9_pr__Cessation_Reason__c</columns>
    <columns>tc9_pr__Pay_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>